[package]
name = "jhon"
description = "JinHui's Object Notation language, basically it's design for config file"
version = "1.0.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
itoa = "1.0"
ryu = "1.0"
