[package]
name = "jhon"
description = "JinHui's Object Notation language, basically it's design for config file"
version = "2.0.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

